--- a/themes/chronicle/layouts/_default/baseof.html
+++ b/themes/chronicle/layouts/_default/baseof.html
@@ -2,10 +2,12 @@
 <html>
     {{- partial "head.html" . -}}
     <body>
-        {{- partial "header.html" . -}}
+      {{- partial "header.html" . -}}
+      <div id="main">
         <div id="content">
-        {{- block "main" . }}{{- end }}
+          {{- block "main" . }}{{- end }}
         </div>
-        {{- partial "footer.html" . -}}
+      </div>
+      {{- partial "footer.html" . -}}
     </body>
 </html>
