--- a/themes/chronicle/layouts/partials/head.html
+++ b/themes/chronicle/layouts/partials/head.html
@@ -18,7 +18,7 @@
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 */}}
 
-<link rel="shortcut icon" href="images/favicon.gif" />
+<link rel="shortcut icon" href="/images/favicon.gif" />
 <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css' />
 <script src="//fast.eager.io/SHvf4DiSoU.js"></script>
 
