--- a/themes/chronicle/layouts/partials/head.html
+++ b/themes/chronicle/layouts/partials/head.html
@@ -22,12 +22,8 @@
 <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css' />
 <script src="//fast.eager.io/SHvf4DiSoU.js"></script>
 
-{{/*
-<script src="{{ root_url }}/javascripts/modernizr-2.0.js"></script>
-*/}}
+<script src="/scripts/modernizr-2.0.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>!window.jQuery && document.write(unescape('%3Cscript src="./javascripts/libs/jquery.min.js"%3E%3C/script%3E'))</script>
-{{/*
-<script src="{{ root_url }}/javascripts/octopress.js" type="text/javascript"></script>
-<script src="{{ root_url }}/javascripts/chronicle.js" type="text/javascript"></script>
-*/}}
+<script src="/scripts/octopress.js" type="text/javascript"></script>
+<script src="/scripts/chronicle.js" type="text/javascript"></script>
