--- a/assets/sass/chronicle/_navigation.scss
+++ b/assets/sass/chronicle/_navigation.scss
@@ -166,7 +166,20 @@ body > #nav_floater > nav {
     }
   }
   ul.subscription { position: relative; top: .2em; li, a { border: 0; padding: 0; }}
-  a[rel=subscribe-rss]{ @include mask-subscription-nav('rss.png'); }
+  a[rel=subscribe-rss] {
+    text-indent: -9999999em;
+    mask-image: url('/images/rss.png');
+    mask-repeat: no-repeat;
+    width: 22px;
+    height: 22px;
+    &:after {
+      content: "";
+      position: absolute;
+      top: -1px;
+      left: 0;
+      background-color: #404040;
+    }
+  }
   a[rel=subscribe-email]{ @include mask-subscription-nav('email.png'); }
 }
 
