--- a/assets/sass/chronicle/_sidebar.scss
+++ b/assets/sass/chronicle/_sidebar.scss
@@ -73,8 +73,7 @@ aside.sidebar {
     width: 9px;
     cursor: pointer;
     &:hover {
-      background: mix($sidebar-border, $sidebar-bg);
-      @include background(linear-gradient(left, rgba($sidebar-border, .5), rgba($sidebar-border, 0)));
+      background: linear-gradient(to right, rgba(221, 221, 221, 0.5), rgba(221, 221, 221, 0));
     }
     &:after {
       position: absolute; right: -11px; top: 0;
