--- a/assets/sass/chronicle/_navigation.scss
+++ b/assets/sass/chronicle/_navigation.scss
@@ -68,8 +68,8 @@ body > #nav_floater > nav {
   }
   fieldset[role=search]{ float: right; width: 48%; border: none; }
   fieldset.mobile-nav{ float: left; width: 48%;
-    select{ width: 100%; font-size: .8em; border: 1px solid #888;}
-  }
+                       select{ width: 100%; font-size: .8em; border: 1px solid #888;}
+                     }
   ul { display: none; }
   @media only screen and (min-width: 550px) {
     font-size: .9em;
@@ -120,6 +120,21 @@ body > #nav_floater > nav {
       width: $sidebar-width-medium - $pad-medium*2 - $sidebar-pad-medium - 58px;
       .search { width: 91%; }
     }
+    ul[data-subscription=rss] {
+      position: relative;
+      top: 0.2em;
+      li { background: none; }
+      a {
+        text-indent: -99999em;
+        position: relative;
+        top: 0px;
+        width: 22px;
+        height: 22px;
+        mask-image: url('/images/rss.png');
+        mask-repeat: no-repeat;
+        background-color: #404040;
+      }
+    }
     fieldset.mobile-nav { display: none; }
     fieldset[role=search]{ width: 99%; }
   }
@@ -138,10 +153,10 @@ body > #nav_floater > nav {
     text-indent: 1.3em;
   }
 }
-@mixin mask-subscription-nav($feed: 'rss.png'){
+/*
+@mixin mask-subscription-nav($feed: '/images/rss.png'){
   position: relative; top: 0px;
   text-indent: -999999em;
-  background-color: $nav-border-right;
   border: 0;
   padding: 0;
   &,&:after { @include mask-image($feed); }
@@ -166,23 +181,10 @@ body > #nav_floater > nav {
     }
   }
   ul.subscription { position: relative; top: .2em; li, a { border: 0; padding: 0; }}
-  a[rel=subscribe-rss] {
-    text-indent: -9999999em;
-    mask-image: url('/images/rss.png');
-    mask-repeat: no-repeat;
-    width: 22px;
-    height: 22px;
-    &:after {
-      content: "";
-      position: absolute;
-      top: -1px;
-      left: 0;
-      background-color: #404040;
-    }
-  }
+  a[rel=subscribe-rss] { @include mask-subscription-nav('/images/rss.png'); }
   a[rel=subscribe-email]{ @include mask-subscription-nav('email.png'); }
 }
-
+*/
 body > #nav_floater.follow {
   position: fixed !important;
   width: 100%;
