--- a/themes/chronicle/layouts/partials/navigation.html
+++ b/themes/chronicle/layouts/partials/navigation.html
@@ -2,7 +2,7 @@
   <nav role="navigation">
 
     <ul class="subscription" data-subscription="rss">
-      <li><a href="/feed.xml" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
+      <li><a href="/posts/index.xml" rel="subscribe-rss" title="subscribe via RSS">RSS</a></li>
     </ul>
     <form action="https://www.google.com/search" method="get">
       <fieldset role="search">
