Constrain sidebar recent posts to actual posts

--- a/themes/chronicle/layouts/partials/sidebar.html
+++ b/themes/chronicle/layouts/partials/sidebar.html
@@ -8,7 +8,7 @@
   <section>
     <h1>Recent Posts</h1>
     <ul id="recent_posts">
-      {{ range (first .Site.Params.recentPosts .Site.RegularPages) }}
+      {{ range (first .Site.Params.recentPosts (where .Site.RegularPages "Type" "in" "posts")) }}
       <li class="post">
         <a href="{{ .Permalink }}">{{ .Title | title }}</a>
       </li>
