--- a/themes/chronicle/layouts/partials/head.html
+++ b/themes/chronicle/layouts/partials/head.html
@@ -2,7 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>{{ .Site.Title }}</title>
+<title>{{ .Page.Title | title }}{{ if not (eq .Page.Title .Site.Title) }} - {{ .Site.Title }}{{ end }}</title>
 <meta property="og:title" content="{{ .Site.Title }}" />
 
 <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
