Fix var alias bc issue and line endings

--- a/themes/chronicle/layouts/index.html
+++ b/themes/chronicle/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="blog-index">
-  {{ range (.Paginate (where site.RegularPages "Type" "in" "posts") 5).Pages }}
+  {{ range (.Paginate (where .Site.RegularPages "Type" "in" "posts") 5).Pages }}
   <article>
     <header>
       <h1 class="entry-title"><a href="{{ .Permalink }}">{{ .Title | title }}</a></h1>
