--- a/assets/sass/chronicle/_article.scss
+++ b/assets/sass/chronicle/_article.scss
@@ -112,7 +112,7 @@ article {
   }
   img {
     display: block;
-    margin: 0 auto;
+    margin: 0 auto 15px auto;
   }
   img.noborder {
     border: none;
