Add TOC and styles, style tweets

--- a/themes/chronicle/layouts/posts/single.html
+++ b/themes/chronicle/layouts/posts/single.html
@@ -9,7 +9,12 @@
       </p>
     </header>
 
-    <div class="entry-content">{{ .Content }}</div>
+    <div class="entry-content">
+      {{ if .Params.toc }}
+        {{ .TableOfContents }}
+      {{ end }}
+      {{ .Content }}
+    </div>
 
     <footer>
       <p class="meta">
