--- a/assets/sass/chronicle/_article.scss
+++ b/assets/sass/chronicle/_article.scss
@@ -71,6 +71,10 @@ article {
       }
     }
 
+    twitter-widget {
+      margin: 1.5em 0 !important;
+    }
+
     table {
       border-spacing: 0;
       border-collapse: separate;
@@ -91,6 +95,21 @@ article {
         padding: 0.2em;
         &:last-child {
           border-right: none;
+        }
+      }
+    }
+
+    #TableOfContents {
+      border: 1px solid gray;
+      margin: 1em;
+      padding: 1em 1em 0.5em 0;
+      background-color: #f5f5f5;
+
+      ul {
+        margin: 0;
+
+        li {
+          margin: 0 0 0.5em 2em;
         }
       }
     }
