--- a/assets/sass/chronicle/_article.scss
+++ b/assets/sass/chronicle/_article.scss
@@ -108,6 +108,10 @@ article {
       ul {
         margin: 0;
 
+        ul {
+          margin-top: 0.5em;
+        }
+
         li {
           margin: 0 0 0.5em 2em;
         }
